--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,8 @@
 .herotxt{
     font-family: 'Amita', cursive;
 }
+
+.sec{
+    transform: scale(-1,-1); /* Flips the div horizontally */
+     /* Flips the div vertically */
+}
