made profile page responsive, added custom cursor, changed style of event details

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,7 @@
     transform: scale(-1,-1); /* Flips the div horizontally */
      /* Flips the div vertically */
 }
+
+:root::-webkit-scrollbar{
+    display: none;
+}
