--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,26 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Amita:wght@400;700&family=Jaini+Purva&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Amita:wght@400;700&family=Jaini+Purva&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-.main{
-    font-family: 'Amita', cursive;
-
+.main {
+  font-family: "Amita", cursive;
 }
-:root{
-    font-family: 'Poppins', cursive;
-    /* background-color: black; */
-}
-.herotxt{
-    font-family: 'Amita', cursive;
+:root {
+  font-family: "Poppins", cursive;
+  /* background-color: black; */
 }
 
-.sec{
-    transform: scale(-1,-1); /* Flips the div horizontally */
-     /* Flips the div vertically */
+.herotxt {
+  font-family: "Amita", cursive;
 }
 
-:root::-webkit-scrollbar{
-    display: none;
+.sec {
+  transform: scale(-1, -1); /* Flips the div horizontally */
+  /* Flips the div vertically */
+}
+
+:root::-webkit-scrollbar {
+  display: none;
 }
